aayash le kina garna lagako ho kunni

--- a/Task2/app/src/main/res/layout/activity_main.xml
+++ b/Task2/app/src/main/res/layout/activity_main.xml
@@ -164,8 +164,8 @@
 
     <EditText
         android:id="@+id/timeTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="160dp"
+        android:layout_height="30dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:ems="10"
