--- a/ClassTask/app/src/main/res/layout/activity_dashboard.xml
+++ b/ClassTask/app/src/main/res/layout/activity_dashboard.xml
@@ -7,4 +7,10 @@
     android:layout_height="match_parent"
     tools:context=".Dashboard">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/viewRecycle"
+        android:layout_width="169dp"
+        android:layout_height="266dp"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="1dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
