--- a/index/app/src/main/res/values/colors.xml
+++ b/index/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="Red">#CC1A1A</color>
+    <color name="Blue">#1A6ACC</color>
+
 </resources>
