--- a/firebaseDatabase/app/src/main/res/layout/sample.xml
+++ b/firebaseDatabase/app/src/main/res/layout/sample.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_marginBottom="10dp"
@@ -7,32 +9,77 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="100dp">
-        <LinearLayout
+        android:layout_height="200dp"
+        >
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <TextView
-                android:id="@+id/CardText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Product Name" />
+                android:id="@+id/EditUpd"
+                android:layout_width="36dp"
+                android:layout_height="21dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="28dp"
+                android:text="Edit"
+                android:textColor="@android:color/holo_blue_bright"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/Desc" />
+
             <TextView
                 android:id="@+id/CardPrice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Product price" />
+                android:layout_width="151dp"
+                android:layout_height="27dp"
+                android:layout_marginTop="23dp"
+                android:layout_marginEnd="25dp"
+                android:text="Product price"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/CardText" />
+
+            <TextView
+                android:id="@+id/CardText"
+                android:layout_width="148dp"
+                android:layout_height="23dp"
+                android:layout_marginTop="35dp"
+                android:layout_marginEnd="28dp"
+                android:text="Product Name"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <TextView
                 android:id="@+id/Desc"
+                android:layout_width="147dp"
+                android:layout_height="22dp"
+                android:layout_marginTop="13dp"
+                android:layout_marginEnd="29dp"
+                android:text="Description"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/CardPrice" />
+
+            <ImageView
+                android:id="@+id/imageViewDisplay"
+                android:layout_width="216dp"
+                android:layout_height="187dp"
+                android:layout_marginStart="2dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/baseline_add_a_photo_24" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Description" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/imageViewDisplay"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/imageViewDisplay" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
-
-        </LinearLayout>
 
 
     </androidx.cardview.widget.CardView>
