--- a/firebaseDatabase/app/src/main/res/layout/activity_update_product.xml
+++ b/firebaseDatabase/app/src/main/res/layout/activity_update_product.xml
@@ -6,7 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".UpdateProduct">
+    tools:context=".Ui.Activity.UpdateProduct">
+
+    <ImageView
+        android:id="@+id/imageUpdate"
+        android:layout_width="match_parent"
+        android:layout_height="215dp"
+        app:srcCompat="@drawable/baseline_add_a_photo_24" />
 
     <EditText
         android:id="@+id/updateName"
